# Ferule

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/config_overlay/: __init__.py  cli.py  dispatcher.py  plotter.py
src/cross_compile/: __init__.py  cli.py  executor.py  model_importer.py
src/ferule/: __init__.py  executor.py  model_importer.py
src/ferule/config_overlay/: __init__.py  __main__.py  cli.py  dispatcher.py  measure_common.py  plotter.py
src/ferule/cross_compile/: __init__.py  __main__.py  cli.py  model_importer.py
