[metadata]
name = ferule
version = 0.1.0
author = Valeriy Varlachyov
author_email = valery.varlachyov@deelvin.com
description = Ferule is a pun that explains the role of this library well. The word for rigor in education "motivating ruler" brings together tools for measuring and comparing performance of neural networks.
long_description = A feature of the project is that it uses the functionality of the TVM engine. The library uses an RPC connection to deliver data and take measurements on a mobile device.
url = https://github.com/valvarl/Ferule
keywords = tvm, cross-compile, autotvm, ansor

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7
install_requires =
    Click
    tf2onnx
    tensorflow
    decorator
    attrs
    cloudpickle
    xgboost<=1.5.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cross-compile = cross_compile.cli:cli
